<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity">

    <TextView
            android:id="@+id/stepsTodayText"
            android:layout_width="191dp"
            android:layout_height="40dp"
            android:text="@string/steps_today_text"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="250dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/stepsTodayVal"
            android:layout_width="191dp"
            android:layout_height="57dp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="130dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:textSize="24sp"/>
    <TextView
            android:id="@+id/goalText"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/goal_text"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="170dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textColorLink="@android:color/holo_blue_bright"
            android:visibility="gone"/>

    <TextView
            android:id="@+id/stepsLeftText"
            android:layout_width="105dp"
            android:layout_height="25dp"
            android:text="@string/steps_left_text"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="150dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="120dp"/>
    <TextView
            android:id="@+id/goalVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="6dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="148dp" app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/stepsLeftVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="118dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="148dp"/>

    <ProgressBar
            android:id="@+id/progressBar"
            style="?android:progressBarStyleHorizontal"
            android:progress="80"
            android:layout_width="347dp"
            android:layout_height="478dp"
            android:progressDrawable="@drawable/circularprogressbar" android:rotation="90"
            tools:visibility="visible"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="50dp"/>
    <ProgressBar
            style="?android:progressBarStyleHorizontal"
            android:progress="100"
            android:layout_width="347dp"
            android:layout_height="478dp"
            android:progressDrawable="@drawable/circularprogressbar" android:rotation="90"
            tools:visibility="visible"
            android:visibility="visible"
            android:id="@+id/progressBarShadow" android:alpha="0.3"
            app:layout_constraintTop_toTopOf="@+id/progressBar"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="@+id/progressBar"
            app:layout_constraintStart_toStartOf="@+id/progressBar" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:id="@+id/startStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Start Walk/Run  "
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="360dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="Minutes Elapsed | Exercise Steps | Average MPH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/plannedColumns" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="500dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeValue" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="450dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="200dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mphValue" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="450dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="225dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/stepValue" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="450dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"/>

    <Button
            android:id="@+id/btnLaunchProgressChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_launch_progress_chart"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="450dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="launchProgressChart" app:layout_constraintVertical_bias="0.78"/>
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <Button
            android:id="@+id/btnSetGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:onClick="launchSetGoalActivity"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/my_button"
            android:visibility="visible" app:layout_constraintHorizontal_bias="0.22"
            style="@style/Widget.AppCompat.Button" app:layout_constraintVertical_bias="0.49"
            android:text="@string/goal_text" android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_light_default"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="launchSetGoalActivity"
            android:visibility="visible"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textAllCaps="false"
            android:textColor="@color/common_google_signin_btn_text_light_default" android:id="@+id/btnUpdateSteps"
            app:layout_constraintEnd_toEndOf="@+id/stepsTodayText"
            app:layout_constraintStart_toStartOf="@+id/stepsTodayText"
            app:layout_constraintTop_toTopOf="@+id/stepsTodayText"
            app:layout_constraintBottom_toTopOf="@+id/stepsTodayVal" android:layout_marginBottom="20dp"/>

    <Button
            android:id="@+id/AddFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="330dp"
            android:text="Add Friend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="360dp"/>

    <Button
            android:id="@+id/viewFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="330dp"
            android:layout_marginEnd="50dp"
            android:text="View Friends"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="360dp"/>

</android.support.constraint.ConstraintLayout>