<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <TextView android:id="@+id/stepsTaken"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:textSize="24dp"
              android:layout_marginTop="256dp"
              android:text="Steps Taken: 0" />

    <TextView android:id="@+id/timeElapsed"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:textSize="24dp"
              android:layout_marginTop="4dp"
              android:text="Minutes Elapsed: 0" />

    <TextView android:id="@+id/mph"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:textSize="24dp"
              android:layout_marginTop="4dp"
              android:text="MPH: 0" />

    <Button android:id="@+id/goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:text="Go Back"/>
</LinearLayout>